Fix #806, Add application control functional tests

--- a/modules/cfe_testcase/CMakeLists.txt
+++ b/modules/cfe_testcase/CMakeLists.txt
@@ -2,6 +2,7 @@
 # Create the app module
 add_cfe_app(cfe_testcase
     src/cfe_test.c
+    src/es_application_control_test.c
     src/es_info_test.c
     src/es_task_test.c
     src/es_cds_test.c
