--- a/modules/cfe_testcase/CMakeLists.txt
+++ b/modules/cfe_testcase/CMakeLists.txt
@@ -11,6 +11,7 @@ add_cfe_app(cfe_testcase
     src/fs_header_test.c
     src/fs_util_test.c
     src/sb_pipe_mang_test.c
+    src/tbl_information_test.c
     src/tbl_registration_test.c
     src/time_arithmetic_test.c
     src/time_current_test.c
