--- a/modules/cfe_testcase/CMakeLists.txt
+++ b/modules/cfe_testcase/CMakeLists.txt
@@ -12,6 +12,7 @@ add_cfe_app(cfe_testcase
     src/fs_util_test.c
     src/message_id_test.c
     src/sb_pipe_mang_test.c
+    src/sb_task_test.c
     src/time_arithmetic_test.c
     src/time_current_test.c
     src/time_conversion_test.c
