Fix #1680, add SB subscription functional test
Add tests for the CFE SB subscription API:
 - CFE_SB_Subscribe
 - CFE_SB_SubscribeEx
 - CFE_SB_SubscribeLocal
 - CFE_SB_Unsubscribe
 - CFE_SB_UnsubscribeLocal

--- a/modules/cfe_testcase/CMakeLists.txt
+++ b/modules/cfe_testcase/CMakeLists.txt
@@ -22,6 +22,7 @@ add_cfe_app(cfe_testcase
     src/message_id_test.c
     src/msg_api_test.c
     src/sb_pipe_mang_test.c
+    src/sb_subscription_test.c
     src/tbl_content_access_test.c
     src/tbl_content_mang_test.c
     src/tbl_information_test.c
