Fix #1846, Disable Unit Tests in CodeQL

--- a/.github/workflows/codeql-build.yml
+++ b/.github/workflows/codeql-build.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   SIMULATION: native
-  ENABLE_UNIT_TESTS: true
+  ENABLE_UNIT_TESTS: false
   OMIT_DEPRECATED: true
   BUILDTYPE: release
 
