--- a/cmake/Makefile.sample
+++ b/cmake/Makefile.sample
@@ -98,7 +98,7 @@ $(FILETGTS):
 	$(MAKE) -C $(O)/$(ARCH) $(@)
 endif
 
-# The "prep" step requires extra options that are specified via enviroment variables.
+# The "prep" step requires extra options that are specified via environment variables.
 # Certain special ones should be passed via cache (-D) options to CMake.
 # These are only needed for the "prep" target but they are computed globally anyway.
 PREP_OPTS :=
