--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -60,6 +60,7 @@ jobs:
       - name: Build Docs
         run: |
           make doc > make_doc_stdout.txt 2> make_doc_stderr.txt
+          mv build/docs/detaildesign-warnings.log detaildesign-warnings.log
 
       # Upload documentation logs as artifacts
       - name: Archive Documentation Build Logs
@@ -69,11 +70,19 @@ jobs:
           path: |
             make_doc_stdout.txt
             make_doc_stderr.txt
+            detaildesign-warnings.log
 
       - name: Error Check
         run: |
           if [[ -s make_doc_stderr.txt ]]; then
             cat make_doc_stderr.txt
+            exit -1
+          fi
+
+      - name: Warning Check
+        run: |
+          if [[ -s detaildesign-warnings.log ]]; then
+            cat detaildesign-warnings.log
             exit -1
           fi
 
