--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -122,7 +122,7 @@ jobs:
       - name: Build Usersguide
         run: |
           make usersguide > make_usersguide_stdout.txt 2> make_usersguide_stderr.txt
-          mv build/docs/cfe-usersguide-warnings.log usersguide_warnings.log
+          mv build/docs/users_guide/cfe-usersguide-warnings.log cfe-usersguide-warnings.log
 
       - name: Archive Users Guide Build Logs
         uses: actions/upload-artifact@v2
@@ -131,7 +131,7 @@ jobs:
           path: |
             make_usersguide_stdout.txt
             make_usersguide_stderr.txt
-            usersguide_warnings.log
+            cfe-usersguide-warnings.log
 
       - name: Error Check
         run: |
@@ -142,7 +142,7 @@ jobs:
 
       - name: Warning Check
         run: |
-          if [[ -s usersguide_warnings.log ]]; then
-            cat usersguide_warnings.log
+          if [[ -s cfe-usersguide-warnings.log ]]; then
+            cat cfe-usersguide-warnings.log
             exit -1
           fi
