--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -62,6 +62,7 @@ jobs:
       # Build the code
       - name: Build
         run: |
+          make -C build/native/default_cpu1/config
           make -C build/native/default_cpu1/core_api
           make -C build/native/default_cpu1/core_private
           make -C build/native/default_cpu1/es
@@ -78,6 +79,7 @@ jobs:
       - name: Test
         run: |
           lcov --capture --initial --directory build --output-file coverage_base.info
+          make -C build/native/default_cpu1/config test
           make -C build/native/default_cpu1/core_api test
           make -C build/native/default_cpu1/core_private test
           make -C build/native/default_cpu1/es test
